# ds_cookie_cu12

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/src/: README.md
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/data/: make_dataset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/: README.md  main.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/modeling/: sklearn_models.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/tests/: test_utils.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/utils/: pathfinder.py
